--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,17 +12,16 @@ pipeline {
         }
 
 
-        stage('Changing the File Permission') {
+        stage('Build the File Permission') {
             steps {
-                sh 'chmod +x build.sh'
-                sh 'chmod +x deploy.sh'
-            }
+                sh './build.sh'}
+
         }
 
 
         stage('Executing the File') {
             steps {
-                sh './build.sh'
+                
                 sh './deploy.sh'
             }
         }
